--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <allure.version>2.21.0</allure.version>
         <allure.testng.version>2.21.0</allure.testng.version>
         <aspectj.version>1.9.19</aspectj.version>
+        <rest-assured.version>5.4.0</rest-assured.version>
+        <com.fasterxml.jackson.core.version>2.6.1</com.fasterxml.jackson.core.version>
 
 
     </properties>
@@ -82,6 +84,25 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+<groupId>com.fasterxml.jackson.core</groupId>
+<artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson.core.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
