--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <aspectj.version>1.9.19</aspectj.version>
         <rest-assured.version>5.4.0</rest-assured.version>
         <com.fasterxml.jackson.core.version>2.6.1</com.fasterxml.jackson.core.version>
+        <lombok.version>1.18.32</lombok.version>
 
 
     </properties>
@@ -43,7 +44,8 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>${allure.version}</version> <scope>test</scope>
+            <version>${allure.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -86,7 +88,7 @@
 
         <dependency>
             <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
+            <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
             <scope>test</scope>
         </dependency>
@@ -99,9 +101,15 @@
         </dependency>
 
         <dependency>
-<groupId>com.fasterxml.jackson.core</groupId>
-<artifactId>jackson-databind</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
             <version>${com.fasterxml.jackson.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
