--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <rest-assured.version>5.4.0</rest-assured.version>
         <com.fasterxml.jackson.core.version>2.6.1</com.fasterxml.jackson.core.version>
         <lombok.version>1.18.32</lombok.version>
-
+        <cucumber.version>7.15.0</cucumber.version>
 
     </properties>
 
@@ -111,8 +111,28 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
