--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       env:
-        API_KEY: ${{ secrets.reqres_4498e3e762f64cd4aa69d2532f22899b }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: mvn -B package --file pom.xml
 
