--- a/.github/workflows/ci-pipelane.yml
+++ b/.github/workflows/ci-pipelane.yml
@@ -6,20 +6,24 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   run-tests:
     name: Run Tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.7
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4.2.1
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '11'
           cache: 'maven'
 
       - name: Run tests with API Key
@@ -27,11 +31,41 @@ jobs:
           API_KEY: ${{ secrets.API_KEY }}
         run: mvn -B clean test
 
-      - name: Upload Allure results
-        if: always() # Always run this step to upload results even if tests fail
-        uses: actions/upload-artifact@v4
+      - name: Store Allure results
+        if: always()
+        uses: actions/upload-artifact@v4.3.4
         with:
           name: allure-results
           path: allure-results
-          retention-days: 5
+          retention-days: 1
 
+  publish-report:
+    name: Publish Allure Report
+    needs: run-tests
+    runs-on: ubuntu-latest
+    if: always()
+
+    steps:
+      - name: Download Allure results
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: allure-results
+          path: allure-results
+
+      - name: Generate Allure Report
+        uses: allure-framework/allure-action@v2.11.2
+        with:
+          results_path: allure-results
+          report_path: allure-report
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5.0.0
+
+      - name: Upload Allure report to GitHub Pages
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: 'allure-report'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4.0.5
