--- a/.github/workflows/ci-pipelane.yml
+++ b/.github/workflows/ci-pipelane.yml
@@ -17,10 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4.1.7
+        uses: actions/checkout@v4
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v4.2.1
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '11'
@@ -33,7 +33,7 @@ jobs:
 
       - name: Store Allure results
         if: always()
-        uses: actions/upload-artifact@v4.3.4
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
@@ -47,25 +47,25 @@ jobs:
 
     steps:
       - name: Download Allure results
-        uses: actions/download-artifact@v4.1.8
+        uses: actions/download-artifact@v4
         with:
           name: allure-results
           path: allure-results
 
       - name: Generate Allure Report
-        uses: allure-framework/allure-action@v2
+        uses: allure-framework/allure-action@master # Use master to ensure the action is found
         with:
           results_path: allure-results
           report_path: allure-report
 
       - name: Setup Pages
-        uses: actions/configure-pages@v5.0.0
+        uses: actions/configure-pages@v5
 
       - name: Upload Allure report to GitHub Pages
-        uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: 'allure-report'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4.0.5
+        uses: actions/deploy-pages@v4
