--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,5 +1,3 @@
-# .github/workflows/allure-report.yml
-
 name: Generate and Publish Allure Report
 
 on:
@@ -28,6 +26,8 @@ jobs:
 
 
       - name: Run tests with Maven
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
         run: mvn -B test
 
 
@@ -42,5 +42,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
           publish_dir: ./allure-report
