--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -9,16 +9,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
+    # Executa mesmo se os testes falharem, para que possamos ver o relatório do erro
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event.workflow_run.conclusion == 'failure' }}
 
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Checkout repository
@@ -29,18 +26,21 @@ jobs:
         with:
           name: allure-results
           path: allure-results
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate Allure Report
-        uses: allure-framework/allure-action@v2
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
         with:
-          results_dir: allure-results
-          report_dir: allure-report
+          allure_results: allure-results
+          allure_history: allure-history
+          keep_reports: 20
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: 'allure-report'
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: allure-history
+          publish_branch: allure-reports
